# System-Ticket-Data-Summary

./: .gitignore  README.md  app.py  conftest.py  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
docs/: implementation.md
pages/: 1_Story_Summary.py  2_Insights.py
src/: consts.py  state.py  structs.py  taxonomy.py  theme.py  version.py
src/analysis/: exec_summary.py  insights.py
src/engine/: episodes.py  facts.py  fallback.py  prompts.py  schema.py  structure.py  summarizer.py  validate.py
src/engine/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  ollama.py  openai.py
src/pipeline/: clean.py  export.py  ingest.py  mapping.py
src/report/: __init__.py  insights_report.py  layout.py  story_report.py
src/ui/: charts.py  components.py  story_view.py
tests/: conftest.py  test_clean.py  test_episodes.py  test_exec_summary.py  test_facts.py  test_fallback.py  test_ingest.py  test_insights.py  test_mapping.py  test_providers.py  test_reports.py  test_robustness.py  test_story_view.py  test_structure.py  test_summarizer.py  test_validate.py
